fix: remove body overflow scroll on >1140px

--- a/styles/style.css
+++ b/styles/style.css
@@ -678,8 +678,4 @@ progress::-moz-progress-bar {
         overflow-y: hidden !important;
     }
 
-    body {
-        overflow-y: scroll;
-
-    }
 }
